--- a/css/hl-theme-responsive.css
+++ b/css/hl-theme-responsive.css
@@ -28,10 +28,12 @@
     line-height: 34px;
   }
 
-  /* supporting large text {
+  .hl__large-text, .not-front #content-column .hl__teaser,
+  .hl__large-text a, .not-front #content-column .hl__teaser a,
+  .hl__large-text a:visited, .not-front #content-column .hl__teaser a:visited {
     font-size: 22px;
     line-height: 38px;
-  } */
+  }
 
   #menu-bar ul.nice-menu a {
     font-size: 17px;
@@ -75,14 +77,18 @@
   #content-column .hl__content-block--dark .block-inner, #content-column .hl__content-block--light .block-inner {
     padding: 40px;
   }
-  .not-front #content-column .hl__content-block--dark-image p,
-  .not-front #content-column .hl__content-block--light-image p,
-  .not-front #content-column .hl__content-block--dark p,
-  .not-front #content-column .hl__content-block--light p,
-  .not-front #content-column .hl__content-block--dots p,
-  .not-front #content-column .hl__content-block--dots-button p,
+  #content-column .hl__content-block--dark-image p,
+  #content-column .hl__content-block--light-image p,
+  #content-column .hl__content-block--dark p,
+  #content-column .hl__content-block--light p,
+  #content-column .hl__content-block--dots-button p,
   .hl__quick-facts li {
     font-size: 17px;
+  }
+
+  #content-column .hl__content-block--dots p, #content-column .hl__content-block--dots a {
+  	font-size: 22px;
+  	line-height: 34px;
   }
 
   /* quick facts */
@@ -426,6 +432,15 @@
   }
   .event-start .event-content {
   	padding-top: 0;
+  }
+}
+
+
+/* LIST OF POSTS DETAIL PAGES */
+@media(max-width:1008px){
+  .media-element[style] {
+   padding-left: 0 !important;
+   padding-bottom: 1.5em;
   }
 }
 
